log/build_2024-04-11_22-59-55/aruco_publisher/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/timoha/KSAROmni/install/aruco_publisher/lib/python3.10/site-packages/aruco_publisher/aruco_detector.py", line 55
    y_centerDiff = int (center_y/2.astype(np.int) - frame_height/2)
                                  ^
SyntaxError: invalid decimal literal

